--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,21 +3,21 @@
         <div class="col-4 field">
             <span class="col-1 " [ngClass]="personalVerify ? 'count' : 'checked'">
               <i *ngIf="!personalVerify" class="fas fa-check"></i>
-              <span *ngIf="personalVerify" > 1 </span>
+              <span *ngIf="personalVerify" style="margin-left: 4px;"> 1 </span>
             </span>
             <span style="margin-left: 10px;"> personal Details</span>
         </div>
         <div class="col-4 field">
             <span class="col-1" [ngClass]="detailVerify ? 'count' : 'checked'">
                 <i *ngIf="!detailVerify" class="fas fa-check"></i>
-                <span *ngIf="detailVerify" > 2 </span>
+                <span *ngIf="detailVerify" style="margin-left: 4px;"> 2 </span>
             </span>
             <span style="margin-left: 10px;"> Company Details</span>
         </div>
         <div class="col-4 field">
             <span class="col-1" [ngClass]="otpVerify ? 'count' : 'checked'">
                 <i *ngIf="!otpVerify" class="fas fa-check"></i>
-                <span *ngIf="otpVerify" > 3 </span>
+                <span *ngIf="otpVerify" style="margin-left: 4px;"> 3 </span>
             </span>
             <span style="margin-left: 10px;">Email verification</span>
         </div>
