--- a/src/styles.css
+++ b/src/styles.css
@@ -11,16 +11,40 @@
     width: 8%;
 }
 
+.col-2 {
+    flex: 0 0 auto;
+    padding: 0.5rem;
+    width: 15%;
+}
+
 .col-4 {
     flex: 0 0 auto;
     padding: 0.5rem;
     width: 25%;
 }
 
+.col-5 {
+    flex: 0 0 auto;
+    padding: 2rem;
+    width: 35%;
+}
+
 .col-6 {
     flex: 0 0 auto;
     padding: 0.5rem;
     width: 50%;
+}
+
+.col-7 {
+    flex: 0 0 auto;
+    padding: 0.5rem;
+    width: 65%;
+}
+
+.col-8 {
+    flex: 0 0 auto;
+    padding: 0.5rem;
+    width: 70%;
 }
 
 .col-12 {
